--- a/index.html
+++ b/index.html
@@ -32,12 +32,14 @@
               <a class="nav-link" href="#">Proyectos<span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item active">
+                <a class="btn btn-outline-success my-2 my-sm-0" type="submit" href="https://api.whatsapp.com/send?phone=527711270580">Contactar</a>
               <a class="nav-link" href="#">Contacto<span class="sr-only">(current)</span></a>
             </li>
           </ul>
           <form class="form-inline my-2 my-lg-0">
-            <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Contactar</button>
+            
+            <a class="btn btn-outline-info my-2 my-sm-0" type="submit" href="https://www.messenger.com/">Contactar</a>
+            <a class="btn btn-outline-danger my-2 my-sm-0" type="submit" href="https://mailto:umoedano@gmail.com">Contactar</a>
           </form>
         </div>
       </nav>
