practica con callbacks

--- a/index.html
+++ b/index.html
@@ -5,9 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Personal portafolio</title>
     <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/styles.css">
+    <!-- css particles -->
     <link rel="stylesheet" media="screen" href="css/particles.css">
 </head>
 <body>
+     <!-- Inicia NavBar -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand" href="#">Navbar</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -32,12 +35,11 @@
               <a class="nav-link" href="#">Proyectos<span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item active">
-                <a class="btn btn-outline-success my-2 my-sm-0" type="submit" href="https://api.whatsapp.com/send?phone=527711270580">Contactar</a>
               <a class="nav-link" href="#">Contacto<span class="sr-only">(current)</span></a>
             </li>
           </ul>
           <form class="form-inline my-2 my-lg-0">
-            
+            <a class="btn btn-outline-success my-2 my-sm-0" type="submit" href="https://api.whatsapp.com/send?phone=527711270580">Contactar</a> 
             <a class="btn btn-outline-info my-2 my-sm-0" type="submit" href="https://www.messenger.com/">Contactar</a>
             <a class="btn btn-outline-danger my-2 my-sm-0" type="submit" href="https://mailto:umoedano@gmail.com">Contactar</a>
           </form>
@@ -47,13 +49,21 @@
       <div class="container-fluid">
         <div class="row">
             <div id="particles-js">
-                <div class="col-md-6 offset-md-3" style="color:white; position: absolute; margin-top: 200px;">
+                <div class="col-md-6 offset-md-3"  id="contentBannerHome">
                     <h1>My Page Web</h1>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing</p>
                     <button class="btn btn-info"><span>GET STARTED</span></button>
                 </div>
             </div>
         </div>
+        <div class="row">
+            <div class="col-md-4 offset-md-4">
+                <h1>Hola</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit, ipsam harum quis eius nam necessitatibus explicabo asperiores deleniti commodi ea quia maiores sequi optio sit incidunt, consequatur dolor repellat doloremque.</p>
+            </div>
+        </div>
+
+
     </div>
        <!-- js particles -->
     <script src="js/particles/particles.js"></script>
@@ -61,5 +71,11 @@
     <script src="js/particles/lib/stats.js"></script>
     <script src="js/jquery-3.4.1.js"></script>
     <script src="js/bootstrap.min.js"></script>
+    <!-- Factura js -->
+    <script src="jsScripts/factura.js"></script>
+
+    
+
+
 </body>
 </html>
